--- a/Store-Avion-main/client/netlify.toml
+++ b/Store-Avion-main/client/netlify.toml
@@ -2,3 +2,8 @@
   command = "npm run build"
   publish = "build"
 
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+
