--- a/Store-Avion-main/client/netlify.toml
+++ b/Store-Avion-main/client/netlify.toml
@@ -7,3 +7,9 @@
   [headers.values]
     Access-Control-Allow-Origin = "*"
 
+     [[redirects]]
+  force = true
+  from = "/scripts/x.js"
+  status = 200
+  to = "http://localhost:4000/scripts/x.js"
+
