--- a/Store-Avion-main/client/package.json
+++ b/Store-Avion-main/client/package.json
@@ -42,10 +42,7 @@
     "format": "prettier --write ."
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    
   },
   "browserslist": {
     "production": [
@@ -62,6 +59,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/eslint-parser": "^7.22.15",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "axios-mock-adapter": "^1.22.0",
