--- a/Store-Avion-main/client/package.json
+++ b/Store-Avion-main/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3000",
+  "proxy": "https://6606af0b0a8a02e571cbf1f2--store-avion.netlify.app",
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.7",
